# radiatedPowerPackages

./: .gitignore  CMakeLists.txt  README.md  dipoleRadiationPattern.cxx  noiseTests.cxx  normTest.cxx  polarPlots.cxx  sineTest.cxx  spectrogramTest.cxx
.github/workflows/: CI.yml
Antennas/: CMakeLists.txt  HalfWaveDipole.cxx  HalfWaveDipole.h  HertzianDipole.cxx  HertzianDipole.h  IAntenna.cxx  IAntenna.h  PatchAntenna.cxx  PatchAntenna.h
BasicFunctions/: BasicFunctions.cxx  BasicFunctions.h  CMakeLists.txt  Constants.cxx  Constants.h  EMFunctions.cxx  EMFunctions.h  NuFitValues.h  TritiumSpectrum.cxx  TritiumSpectrum.h
ElectronDynamics/: BaseField.cxx  BaseField.h  BorisSolver.cxx  BorisSolver.h  CMakeLists.txt  ComsolFields.cxx  ComsolFields.h  QTNMFields.cxx  QTNMFields.h  TrajectoryGen.cxx  TrajectoryGen.h
FieldClasses/: CMakeLists.txt  FieldClasses.cxx  FieldClasses.h  FieldPointNR.cxx  FieldPointNR.h
SignalProcessing/: CMakeLists.txt  InducedVoltage.cxx  InducedVoltage.h  LocalOscillator.cxx  LocalOscillator.h  LockInAmplifier.cxx  LockInAmplifier.h  NoiseFunc.cxx  NoiseFunc.h  ScaledSignal.cxx  ScaledSignal.h  Signal.cxx  Signal.h  Spectrogram.cxx  Spectrogram.h
executables/: CMakeLists.txt  CreateElectronTrajectories.cxx  PhasedArrayVariableField.cxx  RFBandwidth.cxx  RadialEnergyResolution.cxx  RealisticFields.cxx  SingleAntennaPower.cxx  crudeEnergyResolution.cxx  dipoleRadiationPattern.cxx  harmonicTrapDetectability.cxx  idealCaseSpectrogram.cxx  mFleckSimulations.cxx  noiseLevels.cxx  noiseTests.cxx  normTest.cxx  perpendicularAntenna.cxx  polarPlots.cxx  rayleighDistributionChecks.cxx  signalSum.cxx  sineTest.cxx  singleBinPower.cxx  spectrogramTest.cxx  timeNoiseTests.cxx  writeTrajectory.cxx
files/: fieldmap_35A_110mmx1000mm.csv  fieldmap_35A_110mmx800mm.csv  fieldmap_35A_170mmx1000mm.csv  fieldmap_35A_170mmx800mm.csv  fieldmap_35A_70mmx1000mm.csv  fieldmap_35A_70mmx800mm.csv  fieldmap_42A_110mmx1000mm.csv  fieldmap_42A_110mmx800mm.csv  fieldmap_42A_170mmx1000mm.csv  fieldmap_42A_170mmx800mm.csv  fieldmap_42A_70mmx1000mm.csv  fieldmap_42A_70mmx800mm.csv  fieldmap_50A_110mmx1000mm.csv  fieldmap_50A_110mmx800mm.csv  fieldmap_50A_170mmx1000mm.csv  fieldmap_50A_170mmx800mm.csv  fieldmap_50A_70mmx1000mm.csv  fieldmap_50A_70mmx800mm.csv
